<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    >

    <TextView
        android:id="@+id/txt_title_choose_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/title_text"
        android:layout_marginTop="20dp"
        android:text="@string/title_choose_gender" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">

        <ImageButton
            android:id="@+id/img_btn_male"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_circle_white"
            android:contentDescription="@string/text_male"
            android:elevation="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/men_selector"  />

        <ImageButton
            android:id="@+id/img_btn_female"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_circle_white"
            android:contentDescription="@string/text_female"
            android:elevation="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/women_selector" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_squiricle_white"
        android:layout_marginBottom="14dp"
        android:textColor="@color/whitetext"
        android:textSize="@dimen/btn_text"
        android:layout_margin="20dp"
        android:text="@string/btn_text_next" />


</RelativeLayout>