<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_accent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_title_daily_intact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:textColor="@color/whitetext"
            android:layout_marginBottom="20dp"
            android:text="@string/title_your_daily_intact" />
        <TextView
            android:id="@+id/text_daily_intact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/whitetext" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_squiricle_white"
        android:layout_marginBottom="14dp"
        android:textColor="@color/whitetext"
        android:layout_margin="20dp"
        android:text="@string/text_add" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_squiricle_white"
        android:layout_marginBottom="14dp"
        android:textColor="@color/whitetext"
        android:layout_margin="20dp"
        android:text="@string/text_cancel" />
    </LinearLayout>
</RelativeLayout>